# tinykats_corestack

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
kats/: consts.py
kats/detectors/: __init__.py  bocpd.py  bocpd_model.py  detector.py  prophet_detector.py  seasonality.py  threshold_detector.py  trend_mk.py
kats/evaluation/: evaluator.py
kats/graphics/: plots.py
kats/models/: __init__.py  neuralprophet.py  prophet.py  stlf.py
kats/models/ensemble/: ensemble.py  kats_ensemble.py
kats/models/globalmodel/: __init__.py  backtester.py  data_processor.py  ensemble.py  model.py  serialize.py  stdmodel.py  utils.py
kats/models/metalearner/: __init__.py  get_metadata.py  metalearner_hpt.py  metalearner_modelselect.py  metalearner_predictability.py
kats/models/reconciliation/: base_models.py  thm.py
kats/tests/: test_consts.py  test_ensemble.py  test_minimal.py
kats/tests/detectors/: test_bocpd.py  test_bocpd_model.py  test_prophet_detector.py  test_seasonality.py  test_trend_mk.py
kats/tests/evaluation/: test_evaluator.py
kats/tests/models/: test_bayesian_var_model.py  test_ensemble.py  test_globalmodel.py  test_metalearner.py  test_neuralprophet_model.py  test_parameter_tuning_default_search_space.py  test_prophet_model.py  test_stlf_model.py  test_thm.py  test_var_model.py
kats/tests/tsfeatures/: test_tsfeatures.py
kats/tsfeatures/: tsfeatures.py
kats/utils/: __init__.py  backtesters.py  ensemble_predict_interval.py  parameter_tuning_utils.py  time_series_parameter_tuning.py
(+5 files in other folders)
