[tool.poetry]
name = "tiny_kats"
version = "0.1.0"
description = ""
authors = ["blue <blue@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
attrs = "21.2.0"
Deprecated = "1.2.12"
matplotlib = "3.6.0"
numpy = "1.21.0"
pandas = "1.3.5"
python-dateutil = "2.8.0"
pystan = "2.19.1.1"
fbprophet = "0.7.1"
neuralprophet = "0.3.2"
scikit-learn = "1.1.2"
scipy = "1.7.3"
seaborn = "0.11.1"
setuptools-git = "1.2"
statsmodels = "0.12.2"
numba = "0.56.3"

[tool.poetry.dev-dependencies]
LunarCalendar = "0.0.9"
ax-platform = "0.2.9"
pytest = "7.2.0"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
